# nnstreamer-edge

./: .gitignore  CMakeLists.txt  README.md  ml-edge-mqtt.pc.in  nnsquery.pc.in  nnstreamer-edge-sensor.pc.in  nnstreamer-edge.pc.in
.ahub/tcchecker-tca/: config.yaml
.github/: CODEOWNERS
.github/actions/check-rebuild/: check_if_rebuild_requires.sh
.github/workflows/: _typos.toml  daily-build-gbs.yml  gbs_build.yml  nns_edge_testhub.yml  tizen_integration_test.yml  ubuntu_clean_cmake_build.yml
debian/: changelog  control  nnstreamer-edge-dev.install  nnstreamer-edge-query-dev.install  nnstreamer-edge-query.install  nnstreamer-edge-sensor-dev.install  nnstreamer-edge-sensor.install  nnstreamer-edge.install  rules
include/: edge_sensor.h  ml-edge-mqtt.h  nnsquery.h  nnstreamer-edge-custom.h  nnstreamer-edge-data.h  nnstreamer-edge-event.h  nnstreamer-edge.h
jni/: nnstreamer-edge.mk
packaging/: nnstreamer-edge.manifest  nnstreamer-edge.spec  run_unittests.sh
src/: CMakeLists.txt
src/libedge-mqtt/: README.md  ml-edge-mqtt.c  mqttcommon.h
src/libnnstreamer-edge/: nnstreamer-edge-aitt.c  nnstreamer-edge-aitt.h  nnstreamer-edge-common.c  nnstreamer-edge-common.h  nnstreamer-edge-custom-impl.c  nnstreamer-edge-custom-impl.h  nnstreamer-edge-data.c  nnstreamer-edge-data.h  nnstreamer-edge-event.c  nnstreamer-edge-event.h  nnstreamer-edge-internal.c  nnstreamer-edge-internal.h  nnstreamer-edge-log.c  nnstreamer-edge-log.h  nnstreamer-edge-mcf.h  nnstreamer-edge-metadata.c  nnstreamer-edge-metadata.h  nnstreamer-edge-mqtt-mosquitto.c  nnstreamer-edge-mqtt-paho.c  nnstreamer-edge-mqtt.c  nnstreamer-edge-mqtt.h  nnstreamer-edge-queue.c  nnstreamer-edge-queue.h  nnstreamer-edge-util.c  nnstreamer-edge-util.h
src/libquery/: nnsquery.c
src/libsensor/: edge_sensor.c  edge_sensor.h  mqttcommon.h
tests/: CMakeLists.txt  nnstreamer-edge-custom-test.c  nnstreamer-edge-custom.c  test_edge_mqtt.c  test_edge_sensor.c  test_nnsquery.c  unittest_edge_mqtt.cc  unittest_edge_sensor.cc  unittest_nnstreamer-edge-aitt.cc  unittest_nnstreamer-edge-custom.cc  unittest_nnstreamer-edge-mcf.cc  unittest_nnstreamer-edge-mqtt.cc  unittest_nnstreamer-edge.cc
tools/build_TizenRT/: Kconfig  Make.defs  Makefile  README.md
