# NNStreamer-Edge library
SET(NNS_EDGE_LIB_NAME nnstreamer-edge)
SET(NNS_EDGE_SRCS
    ${NNS_EDGE_SRC_DIR}/nnstreamer-edge-common.c
    ${NNS_EDGE_SRC_DIR}/nnstreamer-edge-internal.c
    ${NNS_EDGE_SRC_DIR}/nnstreamer-edge-mqtt.c
)

ADD_LIBRARY(${NNS_EDGE_LIB_NAME} SHARED ${NNS_EDGE_SRCS})
SET_TARGET_PROPERTIES(${NNS_EDGE_LIB_NAME} PROPERTIES VERSION ${SO_VERSION})
TARGET_INCLUDE_DIRECTORIES(${NNS_EDGE_LIB_NAME} PRIVATE ${INCLUDE_DIR} ${EDGE_REQUIRE_PKGS_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${NNS_EDGE_LIB_NAME} ${EDGE_REQUIRE_PKGS_LDFLAGS})

INSTALL (TARGETS ${NNS_EDGE_LIB_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})
INSTALL (FILES ${INCLUDE_DIR}/nnstreamer-edge.h DESTINATION ${INCLUDE_INSTALL_DIR})
